# PSP-Reborn-Studio

./: .gitignore  CAHIER_DES_CHARGES.md  README.md  package.json
apps/pbp-studio/: README.md  app.js  index.html  package.json  pbp.js  pbp.test.mjs  style.css
apps/studio/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/studio/src/: App.tsx  EnvironmentPanel.tsx  Help.tsx  PbpStudio.tsx  backend.ts  helpCatalog.test.ts  helpCatalog.ts  main.tsx  pbp.test.ts  pbp.ts  projectCatalog.ts  style.css
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/src/: main.rs
docs/: AIDE_INTEGREE.md  ETAT_DU_PROJET.md
games/LuaDemo/: psp-project.json  script.lua
games/PremierJeu/: Makefile  psp-project.json
research/luaplayer/: README.md
research/luaplayer/documentation/lpp-r163/docs/: annotated.html  annotated.js  class_archive-members.html  class_archive.html  class_at3-members.html  class_at3.html  class_camera-members.html  class_camera.html  class_color-members.html  class_color.html  class_color.js  class_controls-members.html  class_controls.html  class_font-members.html  class_font.html  class_gu-members.html  class_gu.html  class_gum-members.html  class_gum.html  class_image-members.html  class_image.html  class_image.js  class_mp3-members.html  (+78 more)
research/luaplayer/metadata/: SHA256SUMS  missing-downloads.txt
templates/cpp-minimal/: Makefile  psp-project.json
templates/cpp-minimal/src/: main.cpp
tools/: psp-reborn.mjs
(+37 files in other folders)
