[package]
name = "psp-reborn-studio"
version = "0.1.0"
edition = "2021"
authors = ["ApeXploit <Yami-droid-dotcom>"]
homepage = "https://github.com/Yami-droid-dotcom/PSP-Reborn-Studio"
repository = "https://github.com/Yami-droid-dotcom/PSP-Reborn-Studio"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
